   number is downloaded from the SportsTracker website
   (checked on each application start after 30 seconds)
- Module st-util:
  - ported most classes and unit tests from Java to Kotlin, so there is less
    code, it's null safe, and fewer tests are needed
  - refactoring: moved all time-related functions from class FormatUtils to
    new class TimeUtils

v7.6.0:
 SportsTracker changes:
 - updated to JDK 11 (JDK 9 and JDK 10 are not supported by Oracle anymore)
   - JavaFX has been added as dependencies, not part of the JDK anymore
   - JDK used for development and packaging: AdoptOpenJDK 11.0.2
 - updated Kotlin to version 1.3.20
 - fixed all reasoned Kotlin compiler warnings
 - fixed all reasoned Java compiler warnings, suppressed the others (generics)
 - GitHub issue #186: Exercise/Note/Weight Dialog: bugfix for date entries in
   the textfield, the new date is not ignored anymore
 - updated Java requirement to Java 10
   - tested Local Variable Type Inference (JEP 286) in class STApplication
 - support for descent data in exercises (GitHub PR #190)
   - descent is an optional Exercise attribute, shown also in Overview Diagram
     and Statistic Calculation
   - ExerciseViewer reads and displays descent data (for Garmin FIT files only)
     (contributed by Alex Jarosch, completed by Stefan Saring)
   - ExerciseViewer reads and displays total cycles of cadence data, e.g.
     rotations for cycling or steps for running (for Garmin FIT files only)
     (contributed by Alex Jarosch, completed by Stefan Saring)
 - support for sport type specific speed modes (Issue #197):
   - the user can define for each sport type whether speed has to be handled as
     speed (e.g. km/h for cycling) or pace (e.g. min/km for running)
   - the user can define a preferred speed mode in the Preferences Dialog, this
     is being used for new sport types, when multiple sport types are shown and
     in the Overview Dialog